<?xml version="1.0" encoding="utf-8"?>
<package format="2">
  <name>gopro_ros</name>
  <version>1.0.0</version>
  <description>
    This package publishes gopro stream as ros topic.
  </description>
  <author>Aashish Poudel</author>
  <maintainer email="mr.aashiz@gmail.com">Aashish Poudel</maintainer>
  <url type="website">https://github.com/aashizpoudel/gopro_ros</url>
  <url type="repository">https://github.com/aashizpoudel/gopro_ros</url>
  <url type="bugtracker">https://github.com/aashizpoudel/gopro_ros/issues</url>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>cv_bridge</depend>
  <build_depend>rostest</build_depend>
  <depend>message_generation</depend>
  
</package>
